--- a/package.json
+++ b/package.json
@@ -14,10 +14,24 @@
         "@fortawesome/fontawesome-svg-core": "^6.5.1",
         "@fortawesome/free-solid-svg-icons": "^6.5.1",
         "@fortawesome/react-fontawesome": "^0.2.0",
+        "@react-email/button": "^0.0.14",
+        "@react-email/column": "^0.0.9",
+        "@react-email/container": "^0.0.11",
+        "@react-email/head": "^0.0.7",
+        "@react-email/hr": "^0.0.7",
+        "@react-email/html": "^0.0.7",
+        "@react-email/img": "^0.0.7",
+        "@react-email/link": "^0.0.7",
+        "@react-email/preview": "^0.0.8",
+        "@react-email/render": "^0.0.12",
+        "@react-email/section": "^0.0.11",
+        "@react-email/text": "^0.0.7",
         "axios": "^1.6.7",
         "json-server": "^1.0.0-alpha.23",
+        "nodemailer": "^6.9.13",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-email": "^2.1.1",
         "react-hook-form": "^7.51.0",
         "react-router-dom": "^6.22.1"
     },
