--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "json-server": "^1.0.0-alpha.23",
         "nodemailer": "^6.9.13",
         "react": "^18.2.0",
+        "react-date-range": "^2.0.0-alpha.4",
         "react-dom": "^18.2.0",
         "react-email": "^2.1.1",
         "react-hook-form": "^7.51.0",
